Icons on buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="apple-touch-icon"
+            sizes="180x180"
+            href="./src/img/favicon/apple-touch-icon.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./src/img/favicon/favicon-32x32.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="./src/img/favicon/favicon-16x16.png"
+        />
+        <link rel="manifest" href="/site.webmanifest" />
         <link rel="stylesheet" href="./src/css/index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -46,7 +64,15 @@
                 <header class="hero__header">
                     <div class="hero__name">Damian Demasi</div>
                     <div class="hero__main-text">Web Developer</div>
-                    <button class="button-light">work@damiandemasi.com</button>
+                    <button class="button-light">
+                        <img
+                            src="./src/img/icon-email.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-light"
+                        /><span>work@damiandemasi.com</span>
+                    </button>
                 </header>
             </section>
             <section class="hero__featured">
@@ -78,8 +104,14 @@
                         </p>
                     </div>
                     <button class="section__body__button">
-                        <span class="section__body__button__text"
-                            >Read more</span
+                        <img
+                            src="./src/img/icon-read-more.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="section__body__button__text">
+                            Read more</span
                         >
                     </button>
                 </article>
@@ -114,8 +146,14 @@
                         </p>
                     </div>
                     <button class="section__body__button">
-                        <span class="section__body__button__text"
-                            >Read more</span
+                        <img
+                            src="./src/img/icon-read-more.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="section__body__button__text">
+                            Read more</span
                         >
                     </button>
                 </article>
@@ -137,12 +175,24 @@
                     />
                     <div class="section__body__highlight__buttons">
                         <button class="section__body__button">
-                            <span class="section__body__button__text"
+                            <img
+                                src="./src/img/icon-github.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-dark"
+                            /><span class="section__body__button__text"
                                 >GitHub Repository</span
                             >
                         </button>
                         <button class="section__body__button">
-                            <span class="section__body__button__text"
+                            <img
+                                src="./src/img/icon-live.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-dark"
+                            /><span class="section__body__button__text"
                                 >See it live</span
                             >
                         </button>
@@ -202,8 +252,14 @@
                         sollicitudin, et fermentum leo imperdiet.
                     </p>
                     <button class="section__body__button">
-                        <span class="section__body__button__text"
-                            >Read more</span
+                        <img
+                            src="./src/img/icon-read-more.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="section__body__button__text">
+                            Read more</span
                         >
                     </button>
                 </div>
@@ -223,12 +279,24 @@
                     />
                     <div class="section__body__highlight__buttons">
                         <button class="section__body__button">
-                            <span class="section__body__button__text"
+                            <img
+                                src="./src/img/icon-github.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-dark"
+                            /><span class="section__body__button__text"
                                 >GitHub Repository</span
                             >
                         </button>
                         <button class="section__body__button">
-                            <span class="section__body__button__text"
+                            <img
+                                src="./src/img/icon-live.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-dark"
+                            /><span class="section__body__button__text"
                                 >See it live</span
                             >
                         </button>
@@ -288,8 +356,14 @@
                         sollicitudin, et fermentum leo imperdiet.
                     </p>
                     <button class="section__body__button">
-                        <span class="section__body__button__text"
-                            >Read more</span
+                        <img
+                            src="./src/img/icon-read-more.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="section__body__button__text">
+                            Read more</span
                         >
                     </button>
                 </div>
@@ -519,12 +593,24 @@
                             </div>
                         </div>
                         <button class="button-light">
-                            <span class="button-light__text"
+                            <img
+                                src="./src/img/icon-resume.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-light"
+                            /><span class="button-light__text"
                                 >Get my resume</span
                             >
                         </button>
                         <button class="button-light">
-                            <span class="button-light__text"
+                            <img
+                                src="./src/img/icon-linkedin.png"
+                                alt=""
+                                width="20"
+                                height="20"
+                                class="icon-button-light"
+                            /><span class="button-light__text"
                                 >Contact me on LinkedIn</span
                             >
                         </button>
@@ -633,7 +719,13 @@
                     </div>
 
                     <button class="card__button">
-                        <span class="card__button__text"
+                        <img
+                            src="./src/img/icon-linkedin.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
                     </button>
@@ -671,7 +763,13 @@
                     </div>
 
                     <button class="card__button">
-                        <span class="card__button__text"
+                        <img
+                            src="./src/img/icon-linkedin.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
                     </button>
@@ -711,7 +809,13 @@
                     </div>
 
                     <button class="card__button">
-                        <span class="card__button__text"
+                        <img
+                            src="./src/img/icon-linkedin.png"
+                            alt=""
+                            width="20"
+                            height="20"
+                            class="icon-button-dark"
+                        /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
                     </button>
@@ -739,12 +843,26 @@
                             "
                         >
                             <button class="button-light">
-                                <span class="button-light__text"
+                                <img
+                                    src="./src/img/icon-email.png"
+                                    alt=""
+                                    width="20"
+                                    height="20"
+                                    class="icon-button-light"
+                                /><span class="button-light__text"
                                     >work@damiandemasi.com</span
                                 >
                             </button>
                             <button class="button-light">
-                                <span class="button-light__text">LinkedIn</span>
+                                <img
+                                    src="./src/img/icon-linkedin.png"
+                                    alt=""
+                                    width="20"
+                                    height="20"
+                                    class="icon-button-light"
+                                /><span class="button-light__text"
+                                    >LinkedIn</span
+                                >
                             </button>
                         </div>
                     </div>
@@ -787,7 +905,13 @@
                                 form="message-form"
                                 value="Submit"
                             >
-                                <span class="section__body__button__text"
+                                <img
+                                    src="./src/img/icon-send.png"
+                                    alt=""
+                                    width="20"
+                                    height="20"
+                                    class="icon-button-dark"
+                                /><span class="section__body__button__text"
                                     >Send message</span
                                 >
                             </button>
@@ -817,6 +941,21 @@
                             <div class="footer__content__logo">LinkedIn</div>
                             <div class="footer__content__logo">GitHub</div>
                             <div class="footer__content__logo">Twitter</div>
+                        </div>
+                        <div class="footer__resources">
+                            Icons by
+                            <a href="https://www.flaticon.com/" target="_blank"
+                                >Flaticon</a
+                            >,
+                            <a href="https://iconscout.com/" target="_blank"
+                                >Iconscout</a
+                            >,
+                            <a href="https://www.pngwing.com/" target="_blank"
+                                >PNGwing</a
+                            >, and
+                            <a href="https://icon-icons.com/" target="_blank"
+                                >Icon-icons</a
+                            >
                         </div>
                     </div>
                 </div>
