Social media icons and rest of links

--- a/index.html
+++ b/index.html
@@ -36,28 +36,61 @@
             <section class="hero__top-container">
                 <nav class="hero__nav">
                     <div class="hero__nav__logos-container">
-                        <div class="hero__nav__logo">LinkedIn</div>
-                        <div class="hero__nav__logo">GitHub</div>
-                        <div class="hero__nav__logo">Twitter</div>
+                        <div class="nav__logo">
+                            <a
+                                class="hero__nav__logo__link"
+                                href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                                target="_blank"
+                            >
+                                <img
+                                    src="./src/img/icon-linkedin.png"
+                                    alt="LinkedIn"
+                                    width="40"
+                                    height="40"
+                                    class="icon-nav-light"
+                            /></a>
+                        </div>
+                        <div class="nav__logo">
+                            <a
+                                class="hero__nav__logo__link"
+                                href="https://github.com/Colo-Codes"
+                                target="_blank"
+                                ><img
+                                    src="./src/img/icon-github.png"
+                                    alt="GitHub"
+                                    width="40"
+                                    height="40"
+                                    class="icon-nav-light"
+                            /></a>
+                        </div>
+                        <div class="nav__logo">
+                            <a
+                                class="hero__nav__logo__link"
+                                href="https://twitter.com/DamianDemasi"
+                                target="_blank"
+                                ><img
+                                    src="./src/img/icon-twitter.png"
+                                    alt="Twitter"
+                                    width="40"
+                                    height="40"
+                                    class="icon-nav-light"
+                            /></a>
+                        </div>
                     </div>
                     <div class="hero__nav__links-container">
                         <div>
-                            <a href="#projects" class="hero__nav__link"
-                                >Projects</a
-                            >
+                            <a href="#projects" class="nav__link">Projects</a>
                         </div>
                         <div>
-                            <a href="#blog-posts" class="hero__nav__link"
+                            <a href="#blog-posts" class="nav__link"
                                 >Blog Posts</a
                             >
                         </div>
                         <div>
-                            <a href="#about" class="hero__nav__link">About</a>
+                            <a href="#about" class="nav__link">About</a>
                         </div>
                         <div>
-                            <a href="#contact" class="hero__nav__link"
-                                >Contact</a
-                            >
+                            <a href="#contact" class="nav__link">Contact</a>
                         </div>
                     </div>
                 </nav>
@@ -924,12 +957,22 @@
             <div class="footer__background">
                 <div class="footer__background-text">Footer</div>
                 <div class="footer__content__container">
-                    <nav class="footer__content__nav">
-                        <div class="footer__content__nav__link">Projects</div>
-                        <div class="footer__content__nav__link">Blog Posts</div>
-                        <div class="footer__content__nav__link">About</div>
-                        <div class="footer__content__nav__link">Contact</div>
-                    </nav>
+                    <div class="footer__content__nav">
+                        <div>
+                            <a href="#projects" class="nav__link">Projects</a>
+                        </div>
+                        <div>
+                            <a href="#blog-posts" class="nav__link"
+                                >Blog Posts</a
+                            >
+                        </div>
+                        <div>
+                            <a href="#about" class="nav__link">About</a>
+                        </div>
+                        <div>
+                            <a href="#contact" class="nav__link">Contact</a>
+                        </div>
+                    </div>
                     <div class="footer__content__contact">
                         <div class="footer__content__signature">
                             Designed and coded by
@@ -938,10 +981,48 @@
                             >
                         </div>
                         <div class="footer__content__logos-container">
-                            <div class="footer__content__logo">LinkedIn</div>
-                            <div class="footer__content__logo">GitHub</div>
-                            <div class="footer__content__logo">Twitter</div>
+                            <div class="nav__logo">
+                                <a
+                                    class="hero__nav__logo__link"
+                                    href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                                    target="_blank"
+                                >
+                                    <img
+                                        src="./src/img/icon-linkedin.png"
+                                        alt="LinkedIn"
+                                        width="40"
+                                        height="40"
+                                        class="icon-nav-light"
+                                /></a>
+                            </div>
+                            <div class="nav__logo">
+                                <a
+                                    class="hero__nav__logo__link"
+                                    href="https://github.com/Colo-Codes"
+                                    target="_blank"
+                                    ><img
+                                        src="./src/img/icon-github.png"
+                                        alt="GitHub"
+                                        width="40"
+                                        height="40"
+                                        class="icon-nav-light"
+                                /></a>
+                            </div>
+                            <div class="nav__logo">
+                                <a
+                                    class="hero__nav__logo__link"
+                                    href="https://twitter.com/DamianDemasi"
+                                    target="_blank"
+                                    ><img
+                                        src="./src/img/icon-twitter.png"
+                                        alt="Twitter"
+                                        width="40"
+                                        height="40"
+                                        class="icon-nav-light"
+                                /></a>
+                            </div>
                         </div>
+
                         <div class="footer__resources">
                             Icons by
                             <a href="https://www.flaticon.com/" target="_blank"
