Links to LinkedIn and GitHub

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
                 <header class="hero__header">
                     <div class="hero__name">Damian Demasi</div>
                     <div class="hero__main-text">Web Developer</div>
-                    <button class="button-light">
+                    <a
+                        class="button-light"
+                        href="mailto:work@damiandemasi.com"
+                        target="_blank"
+                    >
                         <img
                             src="./src/img/icon-email.png"
                             alt=""
@@ -105,7 +109,7 @@
                             height="20"
                             class="icon-button-light"
                         /><span>work@damiandemasi.com</span>
-                    </button>
+                    </a>
                 </header>
             </section>
             <section class="hero__featured">
@@ -193,7 +197,45 @@
             </section>
         </section>
         <section class="section projects" id="projects">
-            <div class="section__header">
+            <header class="projects__nav">
+                <div class="projects__nav__container">
+                    <div class="projects__nav__container__project">
+                        <a
+                            class="card__footer__button--light"
+                            href="#projects__covid-19-dasboard"
+                        >
+                            <span class="card__footer__button__text"
+                                >COVID-19 Dashboard</span
+                            >
+                        </a>
+                    </div>
+                    <div class="projects__nav__container__project">
+                        <a
+                            class="card__footer__button--light"
+                            href="#projects__to-do-app"
+                        >
+                            <span class="card__footer__button__text"
+                                >To-Do app</span
+                            >
+                        </a>
+                    </div>
+                    <div class="projects__nav__container__project">
+                        <a class="card__footer__button--light" href="#projects">
+                            <span class="card__footer__button__text"
+                                >Project 3</span
+                            >
+                        </a>
+                    </div>
+                    <div class="projects__nav__container__project">
+                        <a class="card__footer__button--light" href="#projects">
+                            <span class="card__footer__button__text"
+                                >Project 4</span
+                            >
+                        </a>
+                    </div>
+                </div>
+            </header>
+            <div class="section__header" id="projects__covid-19-dasboard">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">
                         Project
@@ -297,7 +339,7 @@
                     </button>
                 </div>
             </article>
-            <div class="section__header">
+            <div class="section__header" id="projects__to-do-app">
                 <div class="section__header__text-container">
                     <h2 class="section__header__text-container__text">
                         Project
@@ -636,7 +678,11 @@
                                 >Get my resume</span
                             >
                         </button>
-                        <button class="button-light">
+                        <a
+                            class="button-light"
+                            href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                            target="_blank"
+                        >
                             <img
                                 src="./src/img/icon-linkedin.png"
                                 alt=""
@@ -646,7 +692,7 @@
                             /><span class="button-light__text"
                                 >Contact me on LinkedIn</span
                             >
-                        </button>
+                        </a>
                         <div class="dividing-line--horizontal--light"></div>
                         <div class="article--light">
                             <h3 class="article__title--light">My tech stack</h3>
@@ -751,7 +797,11 @@
                         </p>
                     </div>
 
-                    <button class="card__button">
+                    <a
+                        class="card__button"
+                        href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                        target="_blank"
+                    >
                         <img
                             src="./src/img/icon-linkedin.png"
                             alt=""
@@ -761,7 +811,7 @@
                         /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
-                    </button>
+                    </a>
                 </article>
                 <article class="card move-up-margin">
                     <header class="card__header">
@@ -795,7 +845,11 @@
                         </p>
                     </div>
 
-                    <button class="card__button">
+                    <a
+                        class="card__button"
+                        href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                        target="_blank"
+                    >
                         <img
                             src="./src/img/icon-linkedin.png"
                             alt=""
@@ -805,7 +859,7 @@
                         /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
-                    </button>
+                    </a>
                 </article>
                 <article class="card move-up-margin">
                     <header class="card__header">
@@ -841,7 +895,11 @@
                         </p>
                     </div>
 
-                    <button class="card__button">
+                    <a
+                        class="card__button"
+                        href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                        target="_blank"
+                    >
                         <img
                             src="./src/img/icon-linkedin.png"
                             alt=""
@@ -851,7 +909,7 @@
                         /><span class="card__button__text"
                             >Read it on LinkedIn</span
                         >
-                    </button>
+                    </a>
                 </article>
             </div>
         </section>
@@ -875,7 +933,11 @@
                                 section__body__highlight__buttons-round-container-dark
                             "
                         >
-                            <button class="button-light">
+                            <a
+                                class="button-light"
+                                href="mailto:work@damiandemasi.com"
+                                target="_blank"
+                            >
                                 <img
                                     src="./src/img/icon-email.png"
                                     alt=""
@@ -885,8 +947,12 @@
                                 /><span class="button-light__text"
                                     >work@damiandemasi.com</span
                                 >
-                            </button>
-                            <button class="button-light">
+                            </a>
+                            <a
+                                class="button-light"
+                                href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                                target="_blank"
+                            >
                                 <img
                                     src="./src/img/icon-linkedin.png"
                                     alt=""
@@ -896,7 +962,7 @@
                                 /><span class="button-light__text"
                                     >LinkedIn</span
                                 >
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </section>
