Sticky Navbar and JavaScript behaviour

--- a/index.html
+++ b/index.html
@@ -29,16 +29,84 @@
             href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&family=Bebas+Neue&display=swap"
             rel="stylesheet"
         />
+        <script defer src="./src/js/index.js"></script>
         <title>Damian Demasi's Portfolio</title>
     </head>
     <body>
+        <div class="sticky-nav-reference"></div>
+        <nav class="sticky-nav hidden">
+            <div class="nav__logos-container">
+                <a
+                    class="sticky-nav__logo"
+                    href="https://www.linkedin.com/in/damian-demasi-5451378/"
+                    target="_blank"
+                >
+                    <img
+                        src="./src/img/icon-linkedin.png"
+                        alt="LinkedIn"
+                        width="40"
+                        height="40"
+                        class="icon-nav-light"
+                /></a>
+                <a
+                    class="sticky-nav__logo"
+                    href="https://github.com/Colo-Codes"
+                    target="_blank"
+                    ><img
+                        src="./src/img/icon-github.png"
+                        alt="GitHub"
+                        width="40"
+                        height="40"
+                        class="icon-nav-light"
+                /></a>
+                <a
+                    class="sticky-nav__logo"
+                    href="https://twitter.com/DamianDemasi"
+                    target="_blank"
+                    ><img
+                        src="./src/img/icon-twitter.png"
+                        alt="Twitter"
+                        width="40"
+                        height="40"
+                        class="icon-nav-light"
+                /></a>
+            </div>
+            <div class="nav__links-container">
+                <div>
+                    <a
+                        href="#projects"
+                        class="sticky-nav__link sticky-nav__link--active"
+                        id="nav-projects"
+                        >Projects</a
+                    >
+                </div>
+                <div>
+                    <a
+                        href="#blog-posts"
+                        class="sticky-nav__link"
+                        id="nav-blog-posts"
+                        >Blog Posts</a
+                    >
+                </div>
+                <div>
+                    <a href="#about" class="sticky-nav__link" id="nav-about"
+                        >About</a
+                    >
+                </div>
+                <div>
+                    <a href="#contact" class="sticky-nav__link" id="nav-contact"
+                        >Contact</a
+                    >
+                </div>
+            </div>
+        </nav>
         <section class="hero">
             <section class="hero__top-container">
-                <nav class="hero__nav">
-                    <div class="hero__nav__logos-container">
+                <nav class="nav">
+                    <div class="nav__logos-container">
                         <div class="nav__logo">
                             <a
-                                class="hero__nav__logo__link"
+                                class="nav__logo__link"
                                 href="https://www.linkedin.com/in/damian-demasi-5451378/"
                                 target="_blank"
                             >
@@ -52,7 +120,7 @@
                         </div>
                         <div class="nav__logo">
                             <a
-                                class="hero__nav__logo__link"
+                                class="nav__logo__link"
                                 href="https://github.com/Colo-Codes"
                                 target="_blank"
                                 ><img
@@ -65,7 +133,7 @@
                         </div>
                         <div class="nav__logo">
                             <a
-                                class="hero__nav__logo__link"
+                                class="nav__logo__link"
                                 href="https://twitter.com/DamianDemasi"
                                 target="_blank"
                                 ><img
@@ -77,7 +145,7 @@
                             /></a>
                         </div>
                     </div>
-                    <div class="hero__nav__links-container">
+                    <div class="nav__links-container">
                         <div>
                             <a href="#projects" class="nav__link">Projects</a>
                         </div>
