Mobile first - first round

--- a/index.html
+++ b/index.html
@@ -677,31 +677,34 @@
                 </div>
 
                 <div class="dividing-line--horizontal--dark"></div>
-                <article class="section__body__description article--dark">
+                <article class="section__body__description">
                     <div class="move-left">
                         <h2 class="article__header">Why to blog?</h2>
                         <h3 class="article__header__title">
                             The best way to learn is to teach
                         </h3>
                     </div>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Placeat voluptas recusandae at repudiandae molestiae
-                        eius delectus fuga nobis tempora quaerat.
-                    </p>
-                    <h2>Voluptatem explicabo nostrum mollitia</h2>
-                    <p>
-                        Ipsam numquam voluptatem quam ipsum! Voluptate sapiente,
-                        voluptas accusamus itaque iste fugit porro cupiditate at
-                        magni quidem ratione in temporibus qui sed consequatur
-                        vitae! Adipisci nam provident tenetur repudiandae
-                        necessitatibus perspiciatis ipsum quae totam enim.
-                        Assumenda aliquam soluta esse laboriosam omnis a optio
-                        eligendi fugiat error, voluptatibus cupiditate, vero
-                        commodi ea perferendis, quia natus aperiam consequuntur
-                        eum aliquid similique? Totam suscipit tenetur fugiat
-                        quae recusandae?
-                    </p>
+                    <div class="article--dark">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing
+                            elit. Placeat voluptas recusandae at repudiandae
+                            molestiae eius delectus fuga nobis tempora quaerat.
+                        </p>
+                        <h2>Voluptatem explicabo nostrum mollitia</h2>
+                        <p>
+                            Ipsam numquam voluptatem quam ipsum! Voluptate
+                            sapiente, voluptas accusamus itaque iste fugit porro
+                            cupiditate at magni quidem ratione in temporibus qui
+                            sed consequatur vitae! Adipisci nam provident
+                            tenetur repudiandae necessitatibus perspiciatis
+                            ipsum quae totam enim. Assumenda aliquam soluta esse
+                            laboriosam omnis a optio eligendi fugiat error,
+                            voluptatibus cupiditate, vero commodi ea
+                            perferendis, quia natus aperiam consequuntur eum
+                            aliquid similique? Totam suscipit tenetur fugiat
+                            quae recusandae?
+                        </p>
+                    </div>
                 </article>
             </div>
         </section>
@@ -713,7 +716,9 @@
             </div>
             <div class="section__body__background">
                 <article class="section__body-container move-up-top">
-                    <section class="section__body__highlight move-up-margin">
+                    <section
+                        class="section__body__highlight move-up-margin--photo"
+                    >
                         <div class="section__body__highlight__picture">
                             <div
                                 class="
