Mobile first - second round

--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                     <img
                         src="./src/img/video-placeholder-600x300.png"
                         alt="Video of project"
+                        class="section__body__highlight__preview-gif"
                     />
                     <div class="section__body__highlight__buttons">
                         <button class="section__body__button">
@@ -419,6 +420,7 @@
                     <img
                         src="./src/img/video-placeholder-600x300.png"
                         alt="Video of project"
+                        class="section__body__highlight__preview-gif"
                     />
                     <div class="section__body__highlight__buttons">
                         <button class="section__body__button">
